Fix syntax inconsistencies in SCSS and HTML files; ensure proper formatting for dark mode styles and HTML elements

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,7 +181,7 @@ tr.clickable {
     cursor: not-allowed;
   }
 
-  [data-dark="true"] & {
+  [data-dark='true'] & {
     color: inherit;
 
     svg {
