--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -278,7 +278,7 @@ form .flex-auto + input[type='submit'] {
     margin-bottom: 0px;
   }
 
-  [data-dark="true"] & {
+  [data-dark='true'] & {
     background-color: #252429 !important;
     color: lighten(map-get($palette, slate), 50%) !important;
 
